@@ -7,6 +7,8 @@ V0.90
 - Added   : Change wp shortcode filter 
 - Added   : TinyMCE V3 Button for WordPress 2.5
 - Added   : Singlepic center class 
+- Changed : By default enable metadata import
+- Changed : Moved disable/enable flash setting to add gallery
 - Changed : wpdb->escape gallerytag in nggfunctions.
 - Changed : Sort files after scan folder
 - Changed : Check for filename during upload
